--- a/day4026-HTML/register.html
+++ b/day4026-HTML/register.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>用户注册</title>
 </head>
 <body>
-$END$
+    <form action="">
+        用户名: <input type="text" name="username" title="用户名"><br>
+        密码:   <input type="password" name="password" title="密码"><br>
+        性别:   <input type="radio" name="sex" title="男">男
+                <input type="radio" name="sex" title="女">女<br>
+        国籍:
+            <select name="country" id="" title="国籍">
+                <option value="俄罗斯">俄罗斯</option>
+                <option value="中国">中国</option>
+                <option value="巴基斯坦">巴基斯坦</option>
+            </select><br>
+        上传文件: <input type="file" title="上传文件"><br>
+        自我描述: <br>
+        <textarea name="desc" title="自我描述" cols="30" rows="10"></textarea><br>
+        爱好:<br>
+        <input type="checkbox" name="hobby" title="抽烟">抽烟<br>
+        <input type="checkbox" name="hobby" title="喝酒">喝酒<br>
+        <input type="checkbox" name="hobby" title="洗脚">洗脚<br>
+
+        <input type="button" value="按钮">
+        <input type="reset" value="重置按钮">
+        <input type="submit" value="注册按钮">
+        <input type="hidden" name="thisisarandomnumber">
+    </form>
 </body>
 </html>
